--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@
         <button class="restart">Restart</button>
       </div>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
